...
                    vm.addTodaysSession(Double(self.timerViewModel.getInitialTime()))
                    timerViewModel.playSounds("ding")
                }
            
            Text("- \(quotes.returnQuote()[1])")
                .multilineTextAlignment(.center)
                .accessibilityIdentifier("quoteAuthor")
//            WatchNavButton(
//                destination: {PostSessionStatView().environmentObject(appState)},
//                label: {Text("Good Job!")})
//            .background(Color.pink)
            
            NavigationLink(
...
                .overlay(
                    Capsule(style: .continuous)
                        .stroke(Color.ColorPrimary, lineWidth: 1)
                        .frame(width: 150, height: 30, alignment: .center)
                )
                .padding(.top, 10)
                .accessibilityIdentifier("goodJobBtn")
//
            }
    }
}

struct PostTimerWatchView_Previews: PreviewProvider {
...
